--- a/sites/all/themes/charlessubtheme/css/charlessubtheme-menu.css
+++ b/sites/all/themes/charlessubtheme/css/charlessubtheme-menu.css
@@ -25,7 +25,7 @@
 
 
 /* Add Spacing to Menu Items */
-.block-views-drupal-rules-block .content, .block-system-navigation .menu, .block-block-1 .content, .block-block-4 .content, .block-views-latest-updates-block .content {
+.block-user-online .content, .block-menu-devel .content, .block-devel-execute-php .content, .block-system-management .content, .block-views-drupal-rules-block .content, .block-system-navigation .menu, .block-block-1 .content, .block-block-4 .content, .block-views-latest-updates-block .content {
     margin-left: 15px;
     margin-right: 5px;
     height: 100%;
@@ -33,7 +33,7 @@
 
 /* Add pretty boxes to menu items */
 
-.block-views-drupal-rules-block, .block-system-navigation, .block-block-1, .block-block-4, .block-views-latest-updates-block {
+.block-user-online, .block-menu-devel, .block-devel-execute-php, .block-system-management, .block-views-drupal-rules-block, .block-system-navigation, .block-block-1, .block-block-4, .block-views-latest-updates-block {
   background-color: #4d4d4d;
   -webkit-border-radius: 5px; /* Saf3-4, iOS 1-3.2, Android <1.6 */
      -moz-border-radius: 5px; /* FF1-3.6 */
